--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <div class="advice-container">
-      <p class="advice-header">Advice</p>
+      <p class="advice-header"></p>
       <p class="advice-body">Press the button to recieve advice</p>
     </div>
     <div class="btn-container">
-        <button type="button">Press Me</button>
+        <button type="button" id="btnAdvice">Press Me</button>
     </div>
   </body>
   <script src="main.js"></script>
